# UML-1.0

./: .env  .env.example  .gitignore  FastAPI_服务器使用说明.md  demo_mmexport.py  fastapi_server(测试版).py  fastapi_server.py  main.py  mmexport_correction_result.json  plantuml_example.py  pyproject.toml  tasks_db.json  test_fastapi_server.py  test_uml_parser.py  uml_error_analysis_plan.md  uml_error_checker.html  开发文档.md  开发过程.md  纠错提示词.md
.roo/rules/: rules.md
puml_backup/: 20251106_145637.puml  20251106_164804.puml  20251106_171007.puml  20251106_171201.puml
reqrank/: app.py
reqrank/instance/: reqrank.db
reqrank/templates/: analysis.html  base.html  edit.html  list.html
results/0fae0536-d252-44dd-9b2e-649a501f4c0b/: corrected_result.json  error_analysis.json
results/3508eb48-accf-4bee-a42d-f8b40fd1e1e2/: corrected_result.json  error_analysis.json
results/60ea3fad-3cd5-4f2b-a07b-81e159b85ca2/: corrected_result.json  error_analysis.json
results/779a1f80-2b5a-4794-a7f6-bf52a842c01d/: corrected_result.json  error_analysis.json
results/9181648e-3278-4396-aa8e-249ffc9e6ef8/: corrected_result.json  error_analysis.json
results/e8fc0db5-6af8-433c-b508-f4b3723cdc5e/: corrected_result.json  error_analysis.json
test_files/: 5d5fe94a-5245-4559-a8a8-1b25dbc11e68_corrected_uml.json  5d5fe94a-5245-4559-a8a8-1b25dbc11e68_error_analysis.json  test_model.mdj
