[project]
name = "uml1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "json5>=0.9.0",
    "fastapi>=0.120.2",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
]
